kubernetes/app/app-service.default.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{$PROJECTNAME}-app-service"
spec:
  selector:
    app: "{$PROJECTNAME}-app"
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: "{$PROJECTNAME}-app"
  labels:
    app: "{$PROJECTNAME}-app"
spec:
  hostAliases:
    - ip: "127.0.0.1"
      hostnames:
        - "php"
        - "mail"
  containers:
    - name: mail
      image: "nibirrayy/docker-smtp"
      imagePullPolicy: Always

    - name: php
      image: "fduarte42/docker-php:{$PHP_VERSION}"
      imagePullPolicy: Always
      volumeMounts:
        - name: "{$PROJECTNAME}-ssh-pv"
          mountPath: /ssh
        - name: "{$PROJECTNAME}-pv"
          mountPath: /etc/environment
          subPath: container/environment
        - name: "{$PROJECTNAME}-pv"
          mountPath: /etc/apache2/sites-enabled
          subPath: container/apache2/sites-enabled
        - name: "{$PROJECTNAME}-pv"
          mountPath: /usr/local/etc/php/conf.d/zzz-custom.ini
          subPath: container/php/php.default.ini
        - name: "{$PROJECTNAME}-pv"
          mountPath: /etc/ssmtp/ssmtp.conf
          subPath: container/php/ssmtp.default.conf
        - name: "{$PROJECTNAME}-pv"
          mountPath: /tmp/crontab
          subPath: container/php/crontab.default
        - name: "{$PROJECTNAME}-pv"
          mountPath: /var/www/html
          subPath: "{$HTDOCS_FOLDER}"
        - name: "{$PROJECTNAME}-pv"
          mountPath: /var/log/apache
          subPath: logs/apache
      ports:
        - containerPort: 80
  volumes:
    - name: "{$PROJECTNAME}-pv"
      hostPath:
        path: "{$CWD}"
    - name: "{$PROJECTNAME}-ssh-pv"
      secret:
        secretName: "{$PROJECTNAME}-ssh"
