kubernetes/app/app-service.development.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "{$PROJECTNAME}"
  name: "app"
spec:
  selector:
    app: "app"
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: mailhog
      protocol: TCP
      port: 8025
      targetPort: 8025
---
apiVersion: v1
kind: Pod
metadata:
  namespace: "{$PROJECTNAME}"
  name: "app"
  labels:
    app: "app"
spec:
  hostAliases:
    - ip: "127.0.0.1"
      hostnames:
        - "php"
        - "mail"
  containers:
    - name: mail
      image: "mailhog/mailhog"
      imagePullPolicy: Always
      ports:
        - containerPort: 1025
        - containerPort: 8025

    - name: php
      image: "fduarte42/docker-php:{$PHP_VERSION}"
      imagePullPolicy: Always
      volumeMounts:
        - name: "ssh-pv"
          mountPath: /ssh
        - name: "pv"
          mountPath: /etc/environment
          subPath: container/php/environment
        - name: "pv"
          mountPath: /etc/apache2/sites-enabled
          subPath: container/apache2/sites-enabled
        - name: "pv"
          mountPath: /usr/local/etc/php/conf.d/zzz-custom.ini
          subPath: container/php/php.development.ini
        - name: "pv"
          mountPath: /etc/ssmtp/ssmtp.conf
          subPath: container/php/ssmtp.development.conf
        - name: "pv"
          mountPath: /tmp/crontab
          subPath: container/php/crontab.default
        - name: "pv"
          mountPath: /var/www/html
          subPath: "{$HTDOCS_FOLDER}"
        - name: "pv"
          mountPath: /var/log/apache
          subPath: logs/apache
      ports:
        - containerPort: 80
  volumes:
    - name: "pv"
      hostPath:
        path: "{$CWD}"
    - name: "ssh-pv"
      secret:
        secretName: "ssh"
