kubernetes/app/db-service.default.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "{$PROJECTNAME}"
  name: "db"
spec:
  selector:
    app: "db"
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  namespace: "{$PROJECTNAME}"
  name: "db"
  labels:
    app: "db"
spec:
  containers:
    - name: db
      image: mysql:{$MYSQL_VERSION}
      imagePullPolicy: Always
      command: ["docker-entrypoint.sh"]
      args: ["--default-authentication-plugin", "mysql_native_password", "--max-allowed-packet", "16M"]
      ports:
        - containerPort: 3306
      volumeMounts:
        - name: "pv"
          mountPath: /var/lib/mysql
          subPath: container/mysql/data
        - name: "pv"
          mountPath: /docker-entrypoint-initdb.d
          subPath: container/mysql/init

    - name: phpmyadmin
      image: phpmyadmin/phpmyadmin
      imagePullPolicy: Always
      ports:
        - containerPort: 80
      volumeMounts:
        - name: "pv"
          mountPath: /etc/php5/conf.d/zzz-custom.ini
          subPath: container/phpmyadmin/php.ini
  volumes:
    - name: "pv"
      hostPath:
        path: "{$CWD}"
