kubernetes/app/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "{$PROJECTNAME}-db-service"
  namespace: ingress-nginx
spec:
  selector:
    app: "{$PROJECTNAME}-db-app"
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  name: "{$PROJECTNAME}-db-app"
  namespace: ingress-nginx
  labels:
    app: "{$PROJECTNAME}-db-app"
spec:
  containers:
    - name: db
      image: mysql:{$MYSQL_VERSION}
      imagePullPolicy: Always
      command: ["docker-entrypoint.sh"]
      args: ["--default-authentication-plugin", "mysql_native_password", "--max-allowed-packet", "16M"]
      volumeMounts:
        - name: "{$PROJECTNAME}-container-pv-storage"
          mountPath: /var/lib/mysql
          subPath: mysql/data
        - name: "{$PROJECTNAME}-container-pv-storage"
          mountPath: /docker-entrypoint-initdb.d/init.sql
          subPath: mysql/init.sql

    - name: phpmyadmin
      image: phpmyadmin/phpmyadmin
      imagePullPolicy: Always
      ports:
        - containerPort: 80
      volumeMounts:
        - name: "{$PROJECTNAME}-container-pv-storage"
          mountPath: /etc/php5/conf.d/zzz-custom.ini
          subPath: phpmyadmin/php.ini

  volumes:
    - name: "{$PROJECTNAME}-container-pv-storage"
      persistentVolumeClaim:
        claimName: "{$PROJECTNAME}-container-pv-claim"
