kubernetes/app/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: "{$PROJECTNAME}"
  name: "mysql-fw"
spec:
  selector:
    app: "db"
  type: NodePort
  ports:
    - name: mysql
      nodePort: {$MYSQL_PORT}
      port: 3306
