kubernetes/app/app-ingress.default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "{$PROJECTNAME}"
  name: "app-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
spec:
  tls:
    - hosts:
#        - "{$BASE_DOMAIN}"
#        - "www.{$BASE_DOMAIN}"
        - "neu.{$BASE_DOMAIN}"
        - "www.neu.{$BASE_DOMAIN}"
      secretName: tls-secret
  rules:
#    - host: "{$BASE_DOMAIN}"
#      http:
#        paths:
#          - path: /
#            pathType: "Prefix"
#            backend:
#              service:
#                name: "app"
#                port:
#                  number: 80
#    - host: "www.{$BASE_DOMAIN}"
#      http:
#        paths:
#          - path: /
#            pathType: "Prefix"
#            backend:
#              service:
#                name: "app"
#                port:
#                  number: 80
    - host: "neu.{$BASE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: "app"
                port:
                  number: 80
    - host: "www.neu.{$BASE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: "app"
                port:
                  number: 80
