kubernetes/app/app-ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "{$PROJECTNAME}"
  name: "app-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/proxy-body-size: 512m
    nginx.ingress.kubernetes.io/proxy-body-size: 512m
spec:
  rules:
    - host: "mail.{$BASE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: "app"
                port:
                  number: 8025
    - host: "{$BASE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: "app"
                port:
                  number: 80
    - host: "www.{$BASE_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: "Prefix"
            backend:
              service:
                name: "app"
                port:
                  number: 80
