kubernetes/app/db-ingress.default.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: "{$PROJECTNAME}"
  name: "db-ingress"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    ingress.kubernetes.io/whitelist-source-range: "{$PHPMYADMIN_IP_RESTRICTION}"
    nginx.ingress.kubernetes.io/whitelist-source-range: "{$PHPMYADMIN_IP_RESTRICTION}"
spec:
  rules:
    - host: "phpmyadmin.{$BASE_DOMAIN}"
      http:
        paths:
          - path: /
            backend:
              serviceName: "db"
              servicePort: 80
